añadiendo apartado github api

--- a/apendice1.tex
+++ b/apendice1.tex
@@ -1,54 +1,13 @@
-\section{Algoritmo XXX}
-\label{Apendice1:XXX}
+\section{Repositorio del proyecto en Github}
+\label{A:1}
 
 \begin{center}
-\begin{footnotesize}
-\begin{verbatim}
-
-***********************************************************************************
-*
-* Fichero .h
-*
-***********************************************************************************
-*
-* AUTORES
-*   
-*
-* FECHA
-*   
-*
-* DESCRIPCION
-*   
-*
-************************************************************************************/
-
-\end{verbatim}
-\end{footnotesize}
+\textcolor{blue}{\underline{https://github.com/ULL-ESIT-GRADOII-TFG/samuel-ramos-tfg}}
 \end{center}
 
-\section{Algoritmo YYY}
-\label{Apendice1:YYY}
+\section{Repositorio de la memoria en Github}
+\label{A:1}
 
 \begin{center}
-\begin{footnotesize}
-\begin{verbatim}
-
-
-/***********************************************************************************
- *
- * Fichero .h
- *
- ***********************************************************************************
- *
- * AUTORES
- *
- * FECHA
- *
- * DESCRIPCION
- *
- *
- ************************************************************************************/
-
-\end{verbatim}
-\end{footnotesize}
+\textcolor{blue}{\underline{https://github.com/Losnen/memoria-tfg}}
 \end{center}
