--- a/memtfg.tex
+++ b/memtfg.tex
@@ -9,7 +9,10 @@
 \usepackage{algorithm}
 \usepackage{algorithmic}
 \usepackage{multirow}
+\usepackage{hyperref}
+\usepackage{color}
 \usepackage[top=2cm, bottom=2cm, left=2cm, right=2cm]{geometry}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\SONY}{{\sc Sony}}
@@ -306,20 +309,13 @@ Git, Github, Tareas, clases, prácticas.
 \input{cap3.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\chapter{Título del Capítulo Cuatro}
-\label{chapter:cuatro}
-
-\input{cap4.tex}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage{\pagestyle{empty}}
 \thispagestyle{empty}
 
 \chapter{Conclusiones y líneas futuras}
 \label{chapter:Conclusiones}
 
-\input{cap5.tex}
+\input{cap4.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage{\pagestyle{empty}}
@@ -328,7 +324,7 @@ Git, Github, Tareas, clases, prácticas.
 \chapter{Summary and Conclusions}
 \label{chapter:ingles}
 
-\input{cap6.tex}
+\input{cap5.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage{\pagestyle{empty}}
@@ -337,7 +333,7 @@ Git, Github, Tareas, clases, prácticas.
 \chapter{Presupuesto}
 \label{chapter:Presupuesto}
 
-\input{cap7.tex}
+\input{cap6.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -346,13 +342,9 @@ Git, Github, Tareas, clases, prácticas.
 \thispagestyle{empty}
 \begin{appendix}
 
-\chapter{Título del Apéndice 1}
+\chapter{Repositorios}
 \label{appendix:1}
 \input{apendice1.tex}
-
-\chapter{Título del Apéndice 2}
-\label{appendix:2}
-\input{apendice2.tex}
 
 \end{appendix}
 
