--- a/cap4.tex
+++ b/cap4.tex
@@ -1,14 +1,10 @@
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Chapter 5: Conclusiones y Trabajos Futuros 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Chapter 4 : TÃ­tulo del CapÃ­tulo cuatro
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-Los capítulos intermedios servirán para cubrir los siguientes aspectos:
-antecedentes, problemática o estado del arte, objetivos, fases y desarrollo del proyecto.
-
 
 %++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-En el capítulo ~\ref{chapter:intro} se describió bla, bla, bla.....
-
+Este capítulo es obligatorio.
+Toda memoria de Trabajo de Fin de Grado debe incluir unas conclusiones y unas 
+líneas de trabajo futuro 
 
