--- a/cap6.tex
+++ b/cap6.tex
@@ -1,13 +1,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Chapter 6: Summary and Conlusions
+% Chapter 7: Presupuesto
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-This chapter is compulsory.
-The memory should include an extended summary and conclusions in english. 
+Este capítulo es obligatorio.
+Toda memoria de Trabajo de Fin de Grado debe incluir un presupuesto.
 
 %---------------------------------------------------------------------------------
-\section{First Section}
-\label{6:sec:1}
+\section{Sección Uno}
+\label{7:sec:1}
+
+
+\input{tables/table.tex}
+
 
