--- a/memtfg.tex
+++ b/memtfg.tex
@@ -131,7 +131,7 @@
 %\cleardoublepage
 \thispagestyle{empty}
 
-D. {\bf Casiano Rodríguez León}, con N.I.F. 42.020.072-S profesor Titular de Universidad adscrito al Departamento de Nombre del Departamento de la Universidad de La Laguna, como tutor
+D. {\bf Casiano Rodríguez León}, con N.I.F. 42.020.072-S profesor titular Catedratico de Universidad adscrito al Departamento de Lenguajes y Sistemas Informáticos de la Universidad de La Laguna, como tutor
 
 \bigskip
 \bigskip
