--- a/memtfg.bib
+++ b/memtfg.bib
@@ -1,4 +1,54 @@
-@MISC{URL:XML,
-   title     = {{ACM LaTeX Style}},
-   note      = {http://www.acm.org/publications/latex\_style/}
+@MISC{B1,
+   title     = {{Node JS}},
+   note      = {https://nodejs.org/es/docs/}
+}
+
+@MISC{B2,
+   title     = {{Gulp JS}},
+   note      = {https://gulpjs.com/}
+}
+
+@MISC{B3,
+   title     = {{Github REST API V3}},
+   note      = {https://developer.github.com/v3/}
+}
+
+@MISC{B4,
+   title     = {{Documentación de Octokit - Rest JS}},
+   note      = {https://octokit.github.io/rest.js/}
+}
+
+@MISC{B5,
+   title     = {{Passport JS}},
+   note      = {http://www.passportjs.org/docs/}
+}
+
+@MISC{B6,
+   title     = {{Express JS}},
+   note      = {http://expressjs.com/es/}
+}
+
+@MISC{B7,
+   title     = {{Pug JS}},
+   note      = {https://pugjs.org/api/getting-started.html}
+}
+
+@MISC{B8,
+   title     = {{Mongoose JS}},
+   note      = {http://mongoosejs.com/}
+}
+
+@MISC{B9,
+   title     = {{Mongo DB}},
+   note      = {http://mongoosejs.com/}
+}
+
+@MISC{B10,
+   title     = {{Stack Overflow}},
+   note      = {https://es.stackoverflow.com/}
+}
+
+@MISC{B11,
+   title     = {{Heroku}},
+   note      = {https://devcenter.heroku.com/}
 }
