--- a/memtfg.tex
+++ b/memtfg.tex
@@ -296,8 +296,7 @@ Git, Github, Tareas, clases, prácticas.
 
 \input{cap2.tex}
 
-\newpage{\pagestyle{empty}}
-\thispagestyle{empty}
+\newpage
 \input{tables/plan.tex}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage{\pagestyle{empty}}
