--- a/apendice1.tex
+++ b/apendice1.tex
@@ -6,8 +6,15 @@
 \end{center}
 
 \section{Repositorio de la memoria en Github}
-\label{A:1}
+\label{A:2}
 
 \begin{center}
 \textcolor{blue}{\underline{https://github.com/Losnen/memoria-tfg}}
+\end{center}
+
+\section{Enlace a la plataforma}
+\label{A:3}
+
+\begin{center}
+\textcolor{blue}{\underline{https://codelab-tfg1718.herokuapp.com/}}
 \end{center}
