Añadiendo todos los elementos del índice

--- a/cap3.tex
+++ b/cap3.tex
@@ -18,8 +18,6 @@ Espress.js  es un framework de desarrollo de aplicaciones web minimalista y flex
 
 Aquí tenemos una pequeña comparación de la popularidad que han tenido estas tecnologías en el último año.
 
-%++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-
 \subsection{Tecnologías Escogidas}
 \label{3:1:2}
 
@@ -258,5 +256,30 @@ Cabe destacar que para las rutas genéricas como aula o asignación en la que se
 \label{fig:Ejemplo de ruta}
 \end{center}
 \end{figure}
+
+%++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
+\section{Diseño de la base de datos}
+\label{:sec4}
+
+%++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
+\section{Funcionalidades para profesores}
+\label{:sec5}
+
+%++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
+\section{Funcionalidades para alumnos}
+\label{:sec6}
+
+%++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
+\section{Codelab vs Classroom}
+\label{:sec7}
+
+%++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
+\section{Metodología}
+\label{:sec8}
 
 %++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
