Añadiendo section diseño

--- a/cap3.tex
+++ b/cap3.tex
@@ -366,14 +366,90 @@ Para almacenar los alumnos de un aula existe una colección llamada students. Ca
 \end{itemize}
 %++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-\section{Funcionalidades para profesores}
+\section{Descripción general de la plataforma web}
 \label{:sec5}
 
+Codelab es el nombre de la plataforma web que está destinada a simular el funcionamiento de un aula
+que contiene tareas grupales o individuales sobre Github, es decir, como ya se ha mencionado anteriormente 
+las organizaciones simularán las aulas y los repositorios las tareas.
 
+\begin{figure}[!th]
+\begin{center}
+\includegraphics[scale=1.0]{images/probeta}
+\end{center}
+\end{figure}
+
+\subsection{Diseño}
+\label{3:5:1}
+
+El diseño se realizó en Materialize CSS, un framework basando en material dessign. Como se puede apreciar, el diseño es bastante minimalista e intuitivo, aunque esté dirigido a un sector que maneja las nuevas tecgnoloías, se pretende que la plataforma sea lo más simple posible de manejar, tanto para profesores como para alumnos.
+El usuario no debe registrarse, simplemente debe tener una cuenta de Github y loguearse con ella aceptando los permisos para poder ofrecerle los servicios de la plataforma, por lo que no es necesario rellenar ningun formulario de Log in o Sign Up.
+
+
+\begin{figure}[!th]
+\begin{center}
+\includegraphics[scale=0.3]{images/landing}
+\caption{Landing Page}
+\label{fig:Landing page}
+\end{center}
+\end{figure}
+
+\newpage
+
+\subsection{Navegación}
+\label{3:5:2}
+
+La navegación dentro de la aplicación es bastante simple e intuitiva, existen dos barras de navegación:
+
+La primera es la barra superior, que contiene los botones de Sign In si no se está logueado y los botones de Perfil, Aulas y Sign Out en caso de que se esté logueado.
+
+\begin{figure}[!th]
+\begin{center}
+\includegraphics[scale=0.8]{images/nav}
+\caption{Barra de navegación}
+\label{fig:Barra de navegacion}
+\end{center}
+\end{figure}
+
+La segunda está dentro de cada vista, si estamos en la vista de aulas veremos dos pestañas: Aulas y nueva Aula.
+
+En cambio si estamos en la vista de aula veremos tareas, enlace de inivitación, nueva asignación, opciones, alumnos y subir fichero de alumnos.
+
+Por último si nos encontramos en la vista de asignación se verá: repositorios, enlace de inivitación, repositorio de evaluación y opciones.
+
+\begin{figure}[!th]
+\begin{center}
+\includegraphics[scale=0.5]{images/navaula}
+\caption{Barra de navegación de aula}
+\label{fig:Barra de navegacion de aula}
+\end{center}
+\end{figure}
 %++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-\section{Funcionalidades para alumnos}
+
+
+
+\section{Funcionalidades}
 \label{:sec6}
+
+El proyecto se divide en tres paquetes de funcionalidades:
+
+\begin{itemize}
+  \item Funcionalidades básicas
+  \item Funcionalidades para profesores.
+  \item Funcionalidades para el alumno
+\end{itemize}
+
+Cada paquete include funcionalidades para cada rol.
+
+\subsection{Funcionalidades básicas}
+\label{3:6:1}
+
+\subsection{Funcionalidades para profesores}
+\label{3:6:2}
+
+\subsection{Funcionalidades para alumnos}
+\label{3:6:3}
 
 %++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
