finalizando el capitulo 3

--- a/cap3.tex
+++ b/cap3.tex
@@ -580,14 +580,16 @@ Una vez creado el repositorio de evaluación, el profesor debe clonar dicho repo
 \subsection{Funcionalidades para alumnos}
 \label{3:6:3}
 
-%++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+\subsubsection{Perfil}
 
-\section{Codelab vs Classroom}
-\label{:sec7}
+Como alumno el usuario puede visitar el perfil, donde econtrará información básica de Github y dos pestañas, en las que el alumno tiene un historial de las tareas que ha realizado de forma grupal e individual.
 
-%++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-
-\section{Metodología}
-\label{:sec8}
+\begin{figure}[!th]
+\begin{center}
+\includegraphics[scale=0.5]{images/profile}
+\caption{Perfil}
+\label{fig:Perfil}
+\end{center}
+\end{figure}
 
 %++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
