modificaciones iniciales de Casiano

--- a/memtfg.tex
+++ b/memtfg.tex
@@ -111,7 +111,8 @@
 
 \HRule
 \begin{flushright}
-        {\Huge Codelab} \\[2.5mm]
+        {\Huge CodeLab} \\[2.5mm]
+        {\Large A Tool to automate repository creation and access control, giving support to distribute starter code, collect assignments and evaluate the students work on GitHub.} \\[5mm]
         {\Large Samuel Ramos Barroso} \\[5mm]
 
 
@@ -131,7 +132,7 @@
 %\cleardoublepage
 \thispagestyle{empty}
 
-D. {\bf Casiano Rodríguez León}, con N.I.F. 42.020.072-S profesor titular Catedratico de Universidad adscrito al Departamento de Lenguajes y Sistemas Informáticos de la Universidad de La Laguna, como tutor
+D. {\bf Casiano Rodríguez León}, con N.I.F. 42.020.072-S profesor Catedratico de Universidad adscrito al Departamento de Lenguajes y Sistemas Informáticos de la Universidad de La Laguna, como tutor
 
 \bigskip
 \bigskip
@@ -143,7 +144,7 @@ D. {\bf Casiano Rodríguez León}, con N.I.F. 42.020.072-S profesor titular Cate
 Que la presente memoria titulada:
 
 \bigskip
-``{\it Codelab.}''
+``{\it CodeLab.}''
 
 \bigskip
 \bigskip
@@ -213,12 +214,12 @@ Licencia
 Este proyecto trata sobre la creación plataforma web destinada al apoyo del profesorado para la realización de prácticas 
 intentando resolver las limitaciones que tienen otras plataformas para la gestión de prácticas. 
 El profesor podrá crear tareas que serán asignadas a sus alumnos de forma individual o grupal. 
-Cada alumno realizará su realizará en un repositorio git, una vez finalizada, podrá ser revisada por el profesor.
+Cada alumno realizará su trabajo en un repositorio git, el cual una vez finalizado, podrá ser revisado por el profesor.
 
 }
 
 \begin{palabrasClave}
-Git, Github, Tareas, clases, prácticas.
+Git, Github, Tareas, Clases, Prácticas de Programación.
 \end{palabrasClave}
 
 \end{abstract}
@@ -229,15 +230,15 @@ Git, Github, Tareas, clases, prácticas.
 \begin{summary}
 {\em
 
-This project is about the creation of a web platform designed to support teachers for the realization
-of practices trying to solve the limitations that other platforms have for the
-practice management. The teacher can create tasks that will be assigned to his students individually or
-group Each student will perform their work in a git repository, once completed, they can
-be reviewed by the teacher.
+This project deals with the creation of a web platform designed to give support to teachers for the realization
+of programming labs. 
+It tries to solve the limitations of  other platforms with the same goal. 
+The teachers can create tasks that will be assigned to their students individually or in
+groups. Each student will perform their work in a git repository, which once it is completed, can be reviewed by the teacher.
 }
 
 \begin{keywords}
-Git, Github, Tareas, clases, prácticas.
+Git, Github, Tasks, Classes, Programming Labs.
 \end{keywords}
 
 \end{summary}
@@ -254,7 +255,7 @@ Git, Github, Tareas, clases, prácticas.
 % No funciona bien \markboth sin "twoside" en \documentclass, pero al
 % ponerlo se dan un montÃ³n de errores de underfull \vbox, con lo que no se
 % ha puesto.
-\markboth{Samuel Ramos Barroso}{Codelab}
+\markboth{Samuel Ramos Barroso}{CodeLab}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Numeracion en romanos
